--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,16 @@
 {
-    "name": "Human Resource Management App",
-    "short_name": "HRM",
-    "start_url": "/index.php",
-    "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#000000",
-    "icons": [
-      {
-        "src": "/assets/images/icon.png",
-        "sizes": "192x192",
-        "type": "image/png"
-      }
-    ]
-  }
+  "name": "Time Flow Pro",
+  "short_name": "TFP",
+  "description": "Human Resource Management",
+  "start_url": "./index.php",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#000000",
+  "icons": [
+    {
+      "src": "./assets/images/hero-img.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+  ]
+}
